--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -10,11 +10,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Arial Black.ttf">
+            <string>Arial-Black</string>
+        </array>
         <array key="Arial.ttf">
             <string>ArialMT</string>
-        </array>
-        <array key="ArialMTPro-Black.otf">
-            <string>ArialMTPro-Black</string>
         </array>
     </customFonts>
     <scenes>
@@ -188,8 +188,8 @@ Developer: Derek Sheldon</string>
                                 <rect key="frame" x="40" y="99" width="295" height="200"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="THE PROMOTION HEADLINE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="c2e-y1-K5U" customClass="Label" customModule="apphere" customModuleProvider="target">
-                                <rect key="frame" x="20" y="319" width="335" height="96.333333333333314"/>
-                                <fontDescription key="fontDescription" name="ArialMTPro-Black" family="Arial MT Pro" pointSize="38"/>
+                                <rect key="frame" x="20" y="319" width="335" height="131.33333333333337"/>
+                                <fontDescription key="fontDescription" name="Arial-Black" family="Arial Black" pointSize="38"/>
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <size key="shadowOffset" width="1" height="1"/>
@@ -200,7 +200,7 @@ Developer: Derek Sheldon</string>
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="vSG-pe-Kon">
-                                <rect key="frame" x="20" y="435.33333333333326" width="335" height="265.66666666666674"/>
+                                <rect key="frame" x="20" y="470.33333333333331" width="335" height="230.66666666666669"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Footer" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="rRw-mg-WIN">
                                 <rect key="frame" x="20" y="741" width="335" height="17"/>
